added header classes

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
             <li class="menu__item">
               <a class="menu__link" href="pages/about.html">About</a>
             </li>
-            <li class>
-              <a href="pages/articles.html">Articles</a>
+            <li class="menu__item">
+              <a class="menu__link" href="pages/articles.html">Articles</a>
             </li>
-            <li>
-              <a href="pages/contacts.html">Contacts</a>
+            <li class="menu__item">
+              <a class="menu__link" href="pages/contacts.html">Contacts</a>
             </li>
-            <li>
-              <a href="pages/gallery.html">Gallery</a>
+            <li class="menu__item">
+              <a class="menu__link" href="pages/gallery.html">Gallery</a>
             </li>
           </ul>
         </nav>  
