added class in main section

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <!-- section main -->
   <main class="main">
     <div class="container">
-      <div>
+      <div class="main__content">
         <h1 class="main-title">Exclusive car repair and maintenance services</h1>
         <div class="main-section">
           <p class="section-content">Dreamhub has been providing quality car care in New York for year.our shop Dedicated technicians use the latest te...</p>
