--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <!-- section header  -->
   <header class="header">
     <div class="container">
+      <a href="" class="logo">
+        <img src="" alt="">
+      </a>
       <div class="header__inner">
         <nav class="menu">
           <ul class="menu__list"> 
@@ -42,8 +45,8 @@
   <main class="main">
     <div class="container">
       <div class="main__content">
-        <h1 class="main-title">Exclusive car repair and maintenance services</h1>
-        <div class="main-section">
+        <h1 class="main__title">Exclusive car repair and maintenance services</h1>
+        <div class="section">
           <p class="section-content">Dreamhub has been providing quality car care in New York for year.our shop Dedicated technicians use the latest te...</p>
           <img class="section-image" src="./images/mechanic.png" alt="mechanic with tools">
         </div>
