--- a/pages/about.html
+++ b/pages/about.html
@@ -14,24 +14,31 @@
 <!-- section header -->
   <header class="header">
     <div class="container">
-      <ul class="my-menu">
-        <li>
-          <a href="../index.html#Home">Home</a>
-        </li>
-        <li>
-          <a href="#">About</a>
-        </li>
-        <li>
-          <a href="articles.html">Articles</a>
-        </li>
-        <li>
-          <a href="contacts.html">Contacts</a>
-        </li>
-        <li>
-          <a href="gallery.html">Gallery</a>
-        </li>
-      </ul>
-    </div>  
+      <div class="container">
+      <a href="" class="logo">
+        <img src="" alt="">
+      </a>
+      <div class="header__inner">
+        <nav class="menu">
+          <ul class="menu__list"> 
+            <li class="menu__item">
+              <a class="menu__link" href="./../index.html">Home</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="#">About</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="articles.html">Articles</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="contacts.html">Contacts</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="gallery.html">Gallery</a>
+            </li>
+          </ul>
+        </nav>  
+      </div>  
   </header>
 
   <!-- section main -->
