--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -15,23 +15,30 @@
   <!-- section header  -->
   <header class="header">
     <div class="container">
-      <ul class="my-menu">
-        <li>
-          <a href="../index.html#Home">Home</a>
-        </li>
-        <li>
-          <a href="about.html">About</a>
-        </li>
-        <li>
-          <a href="articles.html">Articles</a>
-        </li>
-        <li>
-          <a href="contacts.html">Contacts</a>
-        </li>
-        <li>
-          <a href="#">Gallery</a>
-        </li>
-      </ul>
+      <a href="" class="logo">
+        <img src="" alt="">
+      </a>
+      <div class="header__inner">
+        <nav class="menu">
+          <ul class="menu__list"> 
+            <li class="menu__item">
+              <a class="menu__link" id="" href="#">Home</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="about.html">About</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="articles.html">Articles</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="contacts.html">Contacts</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="gallery.html">Gallery</a>
+            </li>
+          </ul>
+        </nav>  
+      </div>  
     </div>  
   </header>
 
