--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -22,7 +22,7 @@
         <nav class="menu">
           <ul class="menu__list"> 
             <li class="menu__item">
-              <a class="menu__link" id="" href="#">Home</a>
+              <a class="menu__link" href="./../index.html">Home</a>
             </li>
             <li class="menu__item">
               <a class="menu__link" href="about.html">About</a>
