changed string in div gallery

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -44,61 +44,67 @@
 
   <!-- section main  -->
   <main class="main">
+
     <div class="container">
+      
       <h2  class="secondary__title">TOP 6 car 2022 years</h2>
 
-      <div class="gallery">   </div>
-      <ol class="gallery__list">
-        <li class="gallery__item">
-          <figure>
-            <a href="../images/tesla.jpeg" target="_blank" rel="noopener noreferrer">
-              <img  class="gallery__img" src="../images/tesla.jpeg" alt="Tesla Model Y">
-            </a>
-            <figcaption>Tesla Model Y</figcaption>
-          </figure>
-        </li>
-        <li class="gallery__item">
-          <figure>
-            <a href="../images/toyota.jpeg" target="_blank" rel="noopener noreferrer">
-              <img class="gallery__img" src="../images/toyota.jpeg" alt="Toyota Corolla">
-            </a>
-            <figcaption>Toyota Corolla</figcaption>
-          </figure>
-        </li>
-        <li class="gallery__item">
-          <figure>
-            <a href="../images/ford.jpeg" target="_blank" rel="noopener noreferrer">
-              <img class="gallery__img" src="../images/ford.jpeg" alt="Ford F-Series"> 
-            </a>
-            <figcaption>Ford F-Series</figcaption>
-          </figure>
-        </li>
-        <li class="gallery__item">
-          <figure>
-            <a href="../images/toyota-rav-4.jpeg" target="_blank" rel="noopener noreferrer">
-              <img class="gallery__img" src="../images/toyota-rav-4.jpeg" alt="Toyota RAV4">
-            </a>
-            <figcaption>Toyota RAV4</figcaption>
-          </figure>  
-        </li>
-        <li class="gallery__item">
-          <figure> 
-            <a href="../images/honda.jpeg" target="_blank" rel="noopener noreferrer">
-              <img class="gallery__img" src="../images/honda.jpeg" alt="Honda CR-V">
-            </a>
-            <figcaption>Honda CR-V</figcaption>
-          </figure>  
-        </li>
-        <li class="gallery__item">  
-          <figure>
-            <a href="../images/hyunday-tucson.jpeg" target="_blank" rel="noopener noreferrer">
-              <img class="gallery__img" src="../images/hyunday-tucson.jpeg" alt="Hyundai Tucson">
-            </a>
-            <figcaption>Hyundai Tucson</figcaption>  
-          </figure>
-        </li>
-      </ol>
-    </div>  
+      <div class="gallery">
+    
+        <ol class="gallery__list">
+          <li class="gallery__item">
+            <figure>
+              <a href="../images/tesla.jpeg" target="_blank" rel="noopener noreferrer">
+                <img  class="gallery__img" src="../images/tesla.jpeg" alt="Tesla Model Y">
+              </a>
+              <figcaption>Tesla Model Y</figcaption>
+            </figure>
+          </li>
+          <li class="gallery__item">
+            <figure>
+              <a href="../images/toyota.jpeg" target="_blank" rel="noopener noreferrer">
+                <img class="gallery__img" src="../images/toyota.jpeg" alt="Toyota Corolla">
+              </a>
+              <figcaption>Toyota Corolla</figcaption>
+            </figure>
+          </li>
+          <li class="gallery__item">
+            <figure>
+              <a href="../images/ford.jpeg" target="_blank" rel="noopener noreferrer">
+                <img class="gallery__img" src="../images/ford.jpeg" alt="Ford F-Series"> 
+              </a>
+              <figcaption>Ford F-Series</figcaption>
+            </figure>
+          </li>
+          <li class="gallery__item">
+            <figure>
+              <a href="../images/toyota-rav-4.jpeg" target="_blank" rel="noopener noreferrer">
+                <img class="gallery__img" src="../images/toyota-rav-4.jpeg" alt="Toyota RAV4">
+              </a>
+              <figcaption>Toyota RAV4</figcaption>
+            </figure>  
+          </li>
+          <li class="gallery__item">
+            <figure> 
+              <a href="../images/honda.jpeg" target="_blank" rel="noopener noreferrer">
+                <img class="gallery__img" src="../images/honda.jpeg" alt="Honda CR-V">
+              </a>
+              <figcaption>Honda CR-V</figcaption>
+            </figure>  
+          </li>
+          <li class="gallery__item">  
+            <figure>
+              <a href="../images/hyunday-tucson.jpeg" target="_blank" rel="noopener noreferrer">
+                <img class="gallery__img" src="../images/hyunday-tucson.jpeg" alt="Hyundai Tucson">
+              </a>
+              <figcaption>Hyundai Tucson</figcaption>  
+            </figure>
+          </li>
+        </ol>
+      </div>
+
+    </div>
+
   </main>
 
   <!-- section footer  -->
