--- a/pages/about.html
+++ b/pages/about.html
@@ -15,9 +15,7 @@
   <header class="header">
     <div class="container">
       <div class="container">
-      <a href="" class="logo">
-        <img src="" alt="">
-      </a>
+      
       <div class="header__inner">
         <nav class="menu">
           <ul class="menu__list"> 
@@ -44,41 +42,45 @@
   <!-- section main -->
   <main class="main">
     <div class="container">
-      <h2>Why Choose Certified Service?</h2>
-      <p>We are known for our customer service and for offering the best products and services We partnered with you the 
+      <div class="section">
+        <h2 class="secondary__title">Why Choose Certified Service?</h2>
+        <p class="section__content">We are known for our customer service and for offering the best products and services We partnered with you the 
           most sophisticated fair-price estimates
-      </p>
+        </p>
+      </div>
 
-      <ol>
-        <li>
-          <h3>Honesty</h3>
-          <p>We provide top-notch service for import domestic car repairs. Brakes, Tune Ups, Engine Repairs</p>  
-          <img src="../images/honesty-icon.png" alt="oil picture">
-          <a href="">Learn More</a>
-        </li>
-        <li>
-          <h3>Quality</h3>
-          <p>We provide top-notch service for import domestic car repairs. Brakes, Tune Ups, Engine Repairs</p>  
-          <img src="../images/quality-icon.png" alt="wheel picture">
-          <a href="">Learn More</a>
-        </li>
-        <li>
-          <h3>Safety</h3>
-          <p>We provide top-notch service for import domestic car repairs. Brakes, Tune Ups, Engine Repairs</p>  
-          <img src="../images/safety-icon.png" alt="transmission picture">
-          <a href="">Learn More</a>
-        </li>
-        <li>
-          <h3>Experience</h3>
-          <p>We provide top-notch service for import domestic car repairs. Brakes, Tune Ups, Engine Repairs</p>  
-          <img src="../images/experience-icon.png" alt="vehicle picture">
-          <a href="">Learn More</a>
-        </li>
-      </ol> 
+      <div class="quality">
+        <ol class="quality__list">
+          <li class="quality__item">
+            <h3 class="third__title">Honesty</h3>
+            <p class="quality__text">We provide top-notch service for import domestic car repairs. Brakes, Tune Ups, Engine Repairs</p>  
+            <img class="quality__img" src="../images/honesty-icon.png" alt="oil picture">
+            <a class="quality__link" href="">Learn More</a>
+          </li>
+          <li class="quality__item">
+            <h3 class="third__title">Quality</h3>
+            <p class="quality__text">We provide top-notch service for import domestic car repairs. Brakes, Tune Ups, Engine Repairs</p>  
+            <img class="quality__img" src="../images/quality-icon.png" alt="wheel picture">
+            <a class="quality__link" href="">Learn More</a>
+          </li>
+          <li class="quality__item">
+            <h3 class="third__title">Safety</h3>
+            <p> We provide top-notch service for import domestic car repairs. Brakes, Tune Ups, Engine Repairs</p>  
+            <img class="quality__img" src="../images/safety-icon.png" alt="transmission picture">
+            <a class="" href="">Learn More</a>
+          </li>
+          <li class="quality__item">
+            <h3 class="third__title">Experience</h3>
+            <p class="quality">We provide top-notch service for import domestic car repairs. Brakes, Tune Ups, Engine Repairs</p>  
+            <img class="quality__img" src="../images/experience-icon.png" alt="vehicle picture">
+            <a class="quality__link" href="">Learn More</a>
+          </li>
+        </ol> 
+      </div>  
     </div>
   </main>  
 
-  <!-- section main -->
+  <!-- section footer -->
   <footer class="footer">
     <div class="container">
       <address>
