--- a/pages/articles.html
+++ b/pages/articles.html
@@ -13,9 +13,6 @@
 <!-- section header  -->
   <header class="header">
     <div class="container">
-      <a href="" class="logo">
-        <img src="" alt="">
-      </a>
       <div class="header__inner">
         <nav class="menu">
           <ul class="menu__list"> 
@@ -43,25 +40,25 @@
   <!-- section main  -->
   <main class="main">
     <div class="container">
-      <h2 >Your car&#39;s fluids should be checked</h2>
-      <p>Integer pretium dolor id ligula elementum, at vulputate dolor accumsan. Nam eget massa et 
+      <h2 class="secondary__title">Your car&#39;s fluids should be checked</h2>
+      <p class="articles__text">Integer pretium dolor id ligula elementum, at vulputate dolor accumsan. Nam eget massa et 
         erat iaculis posuere id a neque. Morbi bibendum nisi vel eros ultrices, fringilla tincidunt nibh vehicula. 
         Integer id nisl turpis. Aliquam sed ipsum quis nulla finibus rhoncus sit amet id nunc. Nunc justo quam, egestas 
         a dictum ac, imperdiet eu diam.
       </p>
-      <img src="../images/two-mechanic.png" alt="two mechanics see to button car">
-      <p>Vestibulum felis sapien, aliquam vitae dolor ac, ornare eleifend elit. Nam pharetra nibh eu erat gravida, 
+      <img class="articles__img" src="../images/two-mechanic.png" alt="two mechanics see to button car">
+      <p class="articles__text">Vestibulum felis sapien, aliquam vitae dolor ac, ornare eleifend elit. Nam pharetra nibh eu erat gravida, 
         eu aliquam arcu euismod. Mauris varius elit quis ex malesuada, non tristique arcu iaculis. Suspendisse risus purus, 
         ullamcorper pellentesque faucibus vel, aliquet non purus. Interdum et malesuada fames ac ante ipsum primis 
         in faucibus. Vestibulum lacus augue, blandit aliquam laoreet at, sodales in dolor.
       </p>
-      <p>Nulla vitae orci luctus risus tristique sollicitudin sed at quam. Nulla sem dui, faucibus sit amet justo sed, 
+      <p class="articles__text">Nulla vitae orci luctus risus tristique sollicitudin sed at quam. Nulla sem dui, faucibus sit amet justo sed, 
         laoreet ornare leo. In eleifend turpis tellus, a luctus eros imperdiet vitae. Ut vitae maximus enim. In eleifend 
         augue ac est ultrices convallis. Integer eget porta ex. Vivamus eu lorem semper,
       </p>
 
-      <h2>Get a diagnostic test for your car</h2>
-      <p>Nulla vitae orci luctus risus tristique sollicitudin sed at quam. Nulla sem dui, faucibus sit amet justo sed, 
+      <h2 class="secondary__title">Get a diagnostic test for your car</h2>
+      <p class="articles__text">Nulla vitae orci luctus risus tristique sollicitudin sed at quam. Nulla sem dui, faucibus sit amet justo sed, 
         laoreet ornare leo. In eleifend turpis tellus, a luctus eros imperdiet vitae. Ut vitae maximus enim. 
         In eleifend augue ac est ultrices convallis. Integer eget porta ex. Vivamus eu lorem semper,
       </p>
