added class for footer

--- a/pages/articles.html
+++ b/pages/articles.html
@@ -68,7 +68,7 @@
   <!-- section footer  -->
   <footer class="footer">
     <div class="container">
-      <address>
+      <address class="footer__date">
       Written by <a href="mailto:webmaster@example.com">Jon Doe</a>.<br>
       Visit us at:<br>
       Example.com<br>
