--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -110,7 +110,7 @@
 
     <div class="container">
 
-      <address>
+      <address class="footer__date">
       Written by <a href="mailto:webmaster@example.com">Jon Doe</a>.<br>
       Visit us at:<br>
       Example.com<br>
