--- a/pages/articles.html
+++ b/pages/articles.html
@@ -17,7 +17,7 @@
         <nav class="menu">
           <ul class="menu__list"> 
             <li class="menu__item">
-              <a class="menu__link" id="" href="./../index.html">Home</a>
+              <a class="menu__link" href="./../index.html">Home</a>
             </li>
             <li class="menu__item">
               <a class="menu__link" href="about.html">About</a>
